--- a/login/offline.html
+++ b/login/offline.html
@@ -1,4 +1,64 @@
-<!doctype html><meta charset="utf-8"><title>Sin conexión</title>
-<body style="font-family:system-ui;padding:24px">
-  <h1>Sin conexión</h1><p>Vuelve a intentarlo cuando tengas internet.</p>
+<!doctype html>
+<html lang="es-MX">
+<head>
+  <meta charset="utf-8">
+  <title>KASU | Sin conexión</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <style>
+    :root{
+      --bg:#f1f7fc;
+      --surface:#fff;
+      --primary:#01579b;
+      --text:#1f2833;
+    }
+    *{box-sizing:border-box;}
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,system-ui,sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      padding:24px;
+    }
+    main{
+      width:100%;
+      max-width:420px;
+      text-align:center;
+      background:var(--surface);
+      border-radius:18px;
+      padding:32px 28px;
+      box-shadow:0 18px 45px rgba(0,0,0,.1);
+    }
+    h1{
+      margin-bottom:8px;
+      font-size:1.75rem;
+    }
+    p{
+      margin:0 0 18px;
+      line-height:1.45;
+    }
+    button{
+      border:0;
+      border-radius:14px;
+      background:var(--primary);
+      color:#fff;
+      font-size:1rem;
+      font-weight:600;
+      padding:12px 20px;
+      cursor:pointer;
+      width:100%;
+      box-shadow:0 12px 30px rgba(1,87,155,.28);
+    }
+  </style>
+</head>
+<body>
+  <main>
+    <h1>Sin conexión</h1>
+    <p>No pudimos conectarnos a KASU. Revisa tu red y vuelve a intentarlo.</p>
+    <button type="button" onclick="location.reload()">Reintentar</button>
+  </main>
 </body>
+</html>
